force-app/main/default/objects/checkUser__c/checkUser__c.object-meta.xml
<CustomObject>
    <label>checkUser</label>
    <nameField>
        <displayFormat>CU-{0000}</displayFormat>
        <label>checkUserId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>checkUsers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>