force-app/main/default/objects/checkUser__c/fields/About_you__c.field-meta.xml
<CustomField>
    <fullName>About_you__c</fullName>
    <label>About you</label>
    <type>TextArea</type>
</CustomField>