force-app/main/default/objects/checkUser__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <label>User Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>